--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,7 +153,7 @@ dependencies {
     compile project(':react-native-code-push')
     compile project(':react-native-vector-icons')
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.facebook.react:react-native:+'
     // From node_modules
     implementation project(':trackshare')
