--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -21,3 +21,5 @@ MYAPP_RELEASE_KEY_PASSWORD=123456
 MYAPP_RELEASE_STORE_PASSWORD=123456
 MYAPP_RELEASE_STORE_FILE=android_keystore.jks
 android.useDeprecatedNdk=true
+android.useAndroidX=true
+android.enableJetifier=true
